Added javascript for launchpad, bookmarklet too

--- a/client/bookmarklet/translation-helper.html
+++ b/client/bookmarklet/translation-helper.html
@@ -7,11 +7,42 @@
 <body>
 
   <h1>Mozilla Translation Helper</h1>
+  <h3>by Mozilla Nepal</h3>
 
   <p>
-    Use <a href="javascript:(function(){ _my_script=document.createElement('script');_my_script.type='text/javascript';_my_script.src='http://www.mozilla-nepal.org/translation-helper-pootle/translate.js';document.getElementsByTagName('head')[0].appendChild(_my_script); })();">this link</a> to create a Bookmark.
-    (Right Click, Set as Bookmark)
+    Use the following link
+    (<a href="javascript:(function(){ _my_script=document.createElement('script');_my_script.type='text/javascript';_my_script.src='http://www.mozilla-nepal.org/translation-helper-pootle/translate.js';document.getElementsByTagName('head')[0].appendChild(_my_script); })();">Pootle Translation Helper</a>)
+    to create a Bookmark for using Google Translate Power on Pootle (specifically to translate Firefox to Nepali on mozilla.locamotion.org).
+    (Right Click, Bookmark this Link on Firefox) or (Drag to Bookmarks Bar, Ctrl + Shift + B to spawn the bar on Chrom(ium))
   </p>
 
+  <p>
+    Use the following link
+    (<a href="javascript:(function(){ _my_script=document.createElement('script');_my_script.type='text/javascript';_my_script.src='https://www.mozilla-nepal.org/translation-helper-pootle/translate-launchpad.js';document.getElementsByTagName('head')[0].appendChild(_my_script); })();">Launchpad Translation Helper</a>)
+    to create a Bookmark for using Google Translate Power on Launchpad (specifically to translate Ubuntu to Nepali on translations.launchpad.net )
+    (Right Click, Bookmark this Link on Firefox) or (Drag to Bookmarks Bar, Ctrl + Shift + B to spawn the bar on Chrom(ium))
+  </p>
+
+  <h2>How to Work with this?</h2>
+  <p>After you bookmar the links, (and probably name it properly),
+  you should visit either <b>mozilla.locamotion.org</b> or
+  <b>translations.launchpad.net</b>'s Nepali localization page.
+  After you reach to localization page, (the one with text boxes)
+  Please click the respective bookmarks. Once you click the empty input or textarea boxes
+  you will find the translated text automatically (might take time, depends on your internet speed). </p>
+
+
+
+
+  <h3>Special Instruction For launchpad translators</h3>
+  <p>Since launchpad requires https, and browsers do not allow mixed contents to be loaded
+  you should visit <a href="https://mozilla-nepal.org">https://mozilla-nepal.org</a> first
+  and then Permanently add a security exception. If you are stuck on how to do this, contact
+  authors. (Find them at Github Source Code) or email: nootan.ghimire@gmail.com </p>
+
+
+  <h2>Source Code</h2>
+  <p>Find the source code hosted on <a href="https://www.github.com/moz-np/translation-helper/">Github</a>.
+  You can file issues, send PRs or contact authors.</p>
 </body>
 </html>
