--- a/client/bookmarklet/translation-helper.html
+++ b/client/bookmarklet/translation-helper.html
@@ -37,7 +37,9 @@
   <h3>Special Instruction For launchpad translators</h3>
   <p>Since launchpad requires https, and browsers do not allow mixed contents to be loaded
   you should visit <a href="https://mozilla-nepal.org">https://mozilla-nepal.org</a> first
-  and then Permanently add a security exception. If you are stuck on how to do this, contact
+  and then Permanently add a security exception.
+  Repeat the same for <a href="https://www.mozilla-nepal.org/translation-helper-pootle/translate-launchpad.js">https://www.mozilla-nepal.org/translation-helper-pootle/translate-launchpad.js</a>
+  If you are stuck on how to do this, contact
   authors. (Find them at Github Source Code) or email: nootan.ghimire@gmail.com </p>
 
 
